# wiki-brain

./: .gitignore  README.md  SPEC.md  brain.toml.example  pyproject.toml
brain/: cli.py  config.py  mcp_server.py
brain/core/: frontmatter.py  graph.py  lock.py  playbooks.py  vault.py
brain/gardener/: curator.py  mechanical.py  synthesis.py
brain/ingest/: base.py  hermes.py  manifest.py  manual.py  pai.py  sessions.py
brain/integrate/: agent.py
brain/lint/: rules.py
brain/search/: keyword.py  qmd.py
hooks/: session_end.sh
