[project]
name = "brain-tools"
version = "0.1.0"
description = "CLI + MCP tooling for a personal knowledge brain (OKF wiki over raw sources)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
gardener = ["anthropic>=0.40"]
all = ["brain-tools[mcp,gardener]"]

[project.scripts]
brain = "brain.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]
